# mctx

./: pyproject.toml  setup.py
examples/: policy_improvement_demo.py  visualization_demo.py
mctx/_src/: action_selection.py  base.py  policies.py  qtransforms.py  search.py  seq_halving.py  tree.py
mctx/_src/tests/: mctx_test.py  policies_test.py  qtransforms_test.py  seq_halving_test.py  tree_test.py
